--- a/nft-minting-app-main/public/index.html
+++ b/nft-minting-app-main/public/index.html
@@ -22,7 +22,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Mr.Zipie Test</title>
+    <title>Mr.Zipie Mint</title>
     <meta name="description" content="Mint Mr.Zipie NFT" />
   </head>
   <body>
